@@ -1,7 +1,6 @@
 package com.bppleman.tool;
 
-import sun.misc.BASE64Encoder;
-
+import org.apache.commons.codec.binary.Base64;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.Random;
@@ -41,8 +40,8 @@ public class TokenTool {
             MessageDigest md = MessageDigest.getInstance("md5");
             byte md5[] =  md.digest(token.getBytes());
             //base64编码--任意二进制编码明文字符
-            BASE64Encoder encoder = new BASE64Encoder();
-            return encoder.encode(md5);
+            byte[] encodeBase64 = Base64.encodeBase64(md5);
+            return new String(encodeBase64);
         } catch (NoSuchAlgorithmException e) {
             throw new RuntimeException(e);
         }
